# roomba_robin

./: setup_robin.sh
roomba_robin/: CMakeLists.txt  package.xml
roomba_robin_bringup/: CMakeLists.txt  package.xml
roomba_robin_bringup/launch/: minimal.launch  minimal_with_appmanager.launch  paired_public.launch
roomba_robin_bringup/launch/includes/: description.launch.xml  mobile_base.launch.xml  robot.launch.xml
roomba_robin_bringup/launch/includes/roomba/: mobile_base.launch.xml
roomba_robin_description/: CMakeLists.txt  package.xml
roomba_robin_description/meshes/stacks/robin/: plate0.stl  plate1.stl  plate2.stl  plate3.stl  spacer_roomba_plate0.stl  standoff_100.stl  standoff_150.stl  standoff_200.stl
roomba_robin_description/robots/: roomba_robin_kinect.urdf.xacro
roomba_robin_description/urdf/: robin_library.urdf.xacro  robin_properties.urdf.xacro
roomba_robin_description/urdf/sensors/: kinect.urdf.xacro
roomba_robin_description/urdf/stacks/: robin.urdf.xacro
