<package>
  <name>roomba_robin</name>
  <version>1.0.0</version>
  <description>
    The roomba_robin meta package provides all the basic drivers for running and using a TurtleBot with the JKU Stack.
  </description>
  <author>Stephan Hofstaetter</author>
  <maintainer email="Stephan.Hofstaetter@gmail.com">Stephan Hofstaetter</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/roomba_robin</url>
  <url type="repository">https://github.com/robinJKU/roomba_robin</url>
  <url type="bugtracker">https://github.com/robinJKU/roomba_robin/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>linux_hardware</run_depend>
  <run_depend>turtlebot_description</run_depend>
  <run_depend>roomba_robin_description</run_depend>
  <run_depend>roomba_robin_bringup</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
