<package>
  <name>roomba_robin_bringup</name>
  <version>1.0.0</version>
  <description>
     roomba_robin_bringup provides roslaunch scripts for starting the TurtleBot base functionality with the JKU Stack. 
  </description>
  <author>Stephan Hofstaetter</author>
  <maintainer email="stephan.hofstaetter@gmail.com">Stephan Hofstaetter</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/roomba_robin_bringup</url>
  <url type="repository">https://github.com/robinJKU/roobma_robin</url>
  <url type="bugtracker">https://github.com/robinJKU/roobma_robin/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>zeroconf_avahi</run_depend>
  <run_depend>yocs_cmd_vel_mux</run_depend>
  <run_depend>create_node</run_depend>
  <run_depend>turtlebot_description</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>openni_launch</run_depend>
  <run_depend>linux_hardware</run_depend>
  <run_depend>rocon_app_manager</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>roomba_robin_description</run_depend>
</package>
