<package>
  <name>roomba_robin_description</name>
  <version>1.0.0</version>
  <description>
     roomba_robin_description provides a complete 3D model of the TurtleBot with the JKU Stack for simulation and visualization. The files in this package are parsed and used by a variety of other components. Most users will not interact directly with this package.
  </description>
  <author>Stephan Hofstaetter</author>
  <maintainer email="stephan.hofstaetter@gmail.com">Stephan Hofstaetter</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/roomba_robin_bringup</url>
  <url type="repository">https://github.com/robinJKU/roobma_robin</url>
  <url type="bugtracker">https://github.com/robinJKU/roobma_robin/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
